packages/lodepng_flutter/src/lodepng.h


typedef enum LodePNGColorType {
  LCT_GREY = 0, 
  LCT_RGB = 2, 
  LCT_PALETTE = 3, 
  LCT_GREY_ALPHA = 4, 
  LCT_RGBA = 6, 
  LCT_MAX_OCTET_VALUE = 255
} LodePNGColorType;
unsigned lodepng_decode_memory(unsigned char** out, unsigned* w, unsigned* h,
                               const unsigned char* in, size_t insize,
                               LodePNGColorType colortype, unsigned bitdepth);
typedef struct LodePNGColorMode {
  LodePNGColorType colortype; 
  unsigned bitdepth;  
  unsigned char* palette; 
  size_t palettesize; 
  unsigned key_defined; 
  unsigned key_r;       
  unsigned key_g;       
  unsigned key_b;       
} LodePNGColorMode;
typedef struct LodePNGInfo {
  unsigned compression_method;
  unsigned filter_method;     
  unsigned interlace_method;  
  LodePNGColorMode color;     
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned background_defined; 
  unsigned background_r;       
  unsigned background_g;       
  unsigned background_b;       
  size_t text_num; 
  char** text_keys; 
  char** text_strings; 
  size_t itext_num; 
  char** itext_keys; 
  char** itext_langtags; 
  char** itext_transkeys; 
  char** itext_strings; 
  unsigned time_defined; 
  LodePNGTime time;
  unsigned phys_defined; 
  unsigned phys_x; 
  unsigned phys_y; 
  unsigned phys_unit; 
  unsigned gama_defined; 
  unsigned gama_gamma;   
  unsigned chrm_defined; 
  unsigned chrm_white_x; 
  unsigned chrm_white_y; 
  unsigned chrm_red_x;   
  unsigned chrm_red_y;   
  unsigned chrm_green_x; 
  unsigned chrm_green_y; 
  unsigned chrm_blue_x;  
  unsigned chrm_blue_y;  
  unsigned srgb_defined; 
  unsigned srgb_intent;  
  unsigned iccp_defined;      
  char* iccp_name;            
  unsigned char* iccp_profile;
  unsigned iccp_profile_size; 
  unsigned sbit_defined; 
  unsigned sbit_r;       
  unsigned sbit_g;       
  unsigned sbit_b;       
  unsigned sbit_a;       
  unsigned char* unknown_chunks_data[3];
  size_t unknown_chunks_size[3]; 
#endif 
} LodePNGInfo;
typedef struct LodePNGDecoderSettings {
  LodePNGDecompressSettings zlibsettings; 
  unsigned ignore_crc; 
  unsigned ignore_critical; 
  unsigned ignore_end; 
  unsigned color_convert; 
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned read_text_chunks; 
  unsigned remember_unknown_chunks;
  size_t max_text_size;
  size_t max_icc_size;
#endif 
} LodePNGDecoderSettings;
typedef struct LodePNGEncoderSettings {
  LodePNGCompressSettings zlibsettings; 
  unsigned auto_convert;
  unsigned filter_palette_zero;
  LodePNGFilterStrategy filter_strategy;
  const unsigned char* predefined_filters;
  unsigned force_palette;
#ifdef LODEPNG_COMPILE_ANCILLARY_CHUNKS
  unsigned add_id;
  unsigned text_compression;
#endif 
} LodePNGEncoderSettings;
typedef struct LodePNGState {
#ifdef LODEPNG_COMPILE_DECODER
  LodePNGDecoderSettings decoder; 
#endif 
#ifdef LODEPNG_COMPILE_ENCODER
  LodePNGEncoderSettings encoder; 
#endif 
  LodePNGColorMode info_raw; 
  LodePNGInfo info_png; 
  unsigned error;
} LodePNGState;
void lodepng_state_cleanup(LodePNGState* state);
void lodepng_state_copy(LodePNGState* dest, const LodePNGState* source);
unsigned lodepng_decode(unsigned char** out, unsigned* w, unsigned* h,
                        LodePNGState* state,
                        const unsigned char* in, size_t insize);
unsigned lodepng_inspect(unsigned* w, unsigned* h,
                         LodePNGState* state,
                         const unsigned char* in, size_t insize);
unsigned lodepng_inspect_chunk(LodePNGState* state, size_t pos,
                               const unsigned char* in, size_t insize);
unsigned lodepng_encode(unsigned char** out, size_t* outsize,
                        const unsigned char* image, unsigned w, unsigned h,
                        LodePNGState* state);
unsigned lodepng_chunk_length(const unsigned char* chunk);
void lodepng_chunk_type(char type[5], const unsigned char* chunk);
unsigned char lodepng_chunk_type_equals(const unsigned char* chunk, const char* type);
unsigned char lodepng_chunk_ancillary(const unsigned char* chunk);
unsigned char lodepng_chunk_private(const unsigned char* chunk);
unsigned char lodepng_chunk_safetocopy(const unsigned char* chunk);
unsigned char* lodepng_chunk_data(unsigned char* chunk);
const unsigned char* lodepng_chunk_data_const(const unsigned char* chunk);
unsigned lodepng_chunk_check_crc(const unsigned char* chunk);
void lodepng_chunk_generate_crc(unsigned char* chunk);
const unsigned char* lodepng_chunk_find_const(const unsigned char* chunk, const unsigned char* end, const char type[5]);