packages/lodepng_flutter/lib/lodepng_flutter_bindings_generated.dart


  late final _lodepng_state_cleanupPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<LodePNGState>)>>(
          'lodepng_state_cleanup');
  late final _lodepng_state_cleanup = _lodepng_state_cleanupPtr
      .asFunction<void Function(ffi.Pointer<LodePNGState>)>();

  void lodepng_state_copy(
    ffi.Pointer<LodePNGState> dest,
    ffi.Pointer<LodePNGState> source,
  ) {
    return _lodepng_state_copy(
      dest,
      source,
    );
  }

  late final _lodepng_state_copyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LodePNGState>,
              ffi.Pointer<LodePNGState>)>>('lodepng_state_copy');
  late final _lodepng_state_copy = _lodepng_state_copyPtr.asFunction<
      void Function(ffi.Pointer<LodePNGState>, ffi.Pointer<LodePNGState>)>();

  /// Same as lodepng_decode_memory, but uses a LodePNGState to allow custom settings and
  /// getting much more information about the PNG image and color mode.
  int lodepng_decode(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<LodePNGState> state,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
  ) {
    return _lodepng_decode(
      out,
      w,
      h,
      state,
      in1,
      insize,
    );
  }

  late final _lodepng_decodePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<LodePNGState>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size)>>('lodepng_decode');
  late final _lodepng_decode = _lodepng_decodePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<LodePNGState>,
          ffi.Pointer<ffi.UnsignedChar>,
          int)>();

  /// Read the PNG header, but not the actual data. This returns only the information
  /// that is in the IHDR chunk of the PNG, such as width, height and color type. The
  /// information is placed in the info_png field of the LodePNGState.
  int lodepng_inspect(
    ffi.Pointer<ffi.UnsignedInt> w,
    ffi.Pointer<ffi.UnsignedInt> h,
    ffi.Pointer<LodePNGState> state,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
  ) {
    return _lodepng_inspect(
      w,
      h,
      state,
      in1,
      insize,
    );
  }

  late final _lodepng_inspectPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<ffi.UnsignedInt>,
              ffi.Pointer<LodePNGState>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size)>>('lodepng_inspect');
  late final _lodepng_inspect = _lodepng_inspectPtr.asFunction<
      int Function(ffi.Pointer<ffi.UnsignedInt>, ffi.Pointer<ffi.UnsignedInt>,
          ffi.Pointer<LodePNGState>, ffi.Pointer<ffi.UnsignedChar>, int)>();

  /// Reads one metadata chunk (other than IHDR, which is handled by lodepng_inspect)
  /// of the PNG file and outputs what it read in the state. Returns error code on failure.
  /// Use lodepng_inspect first with a new state, then e.g. lodepng_chunk_find_const
  /// to find the desired chunk type, and if non null use lodepng_inspect_chunk (with
  /// chunk_pointer - start_of_file as pos).
  /// Supports most metadata chunks from the PNG standard (gAMA, bKGD, tEXt, ...).
  /// Ignores unsupported, unknown, non-metadata or IHDR chunks (without error).
  /// Requirements: &in[pos] must point to start of a chunk, must use regular
  /// lodepng_inspect first since format of most other chunks depends on IHDR, and if
  /// there is a PLTE chunk, that one must be inspected before tRNS or bKGD.
  int lodepng_inspect_chunk(
    ffi.Pointer<LodePNGState> state,
    int pos,
    ffi.Pointer<ffi.UnsignedChar> in1,
    int insize,
  ) {
    return _lodepng_inspect_chunk(
      state,
      pos,
      in1,
      insize,
    );
  }

  late final _lodepng_inspect_chunkPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<LodePNGState>,
              ffi.Size,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Size)>>('lodepng_inspect_chunk');
  late final _lodepng_inspect_chunk = _lodepng_inspect_chunkPtr.asFunction<
      int Function(ffi.Pointer<LodePNGState>, int,
          ffi.Pointer<ffi.UnsignedChar>, int)>();

  /// This function allocates the out buffer with standard malloc and stores the size in *outsize.
  int lodepng_encode(
    ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>> out,
    ffi.Pointer<ffi.Size> outsize,
    ffi.Pointer<ffi.UnsignedChar> image,
    int w,
    int h,
    ffi.Pointer<LodePNGState> state,
  ) {
    return _lodepng_encode(
      out,
      outsize,
      image,
      w,
      h,
      state,
    );
  }

  late final _lodepng_encodePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
              ffi.Pointer<ffi.Size>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.UnsignedInt,
              ffi.UnsignedInt,
              ffi.Pointer<LodePNGState>)>>('lodepng_encode');
  late final _lodepng_encode = _lodepng_encodePtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Pointer<ffi.UnsignedChar>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<ffi.UnsignedChar>,
          int,
          int,
          ffi.Pointer<LodePNGState>)>();

  /// Gets the length of the data of the chunk. Total chunk length has 12 bytes more.
  /// There must be at least 4 bytes to read from. If the result value is too large,
  /// it may be corrupt data.
  int lodepng_chunk_length(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_length(
      chunk,
    );
  }

  late final _lodepng_chunk_lengthPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_length');
  late final _lodepng_chunk_length = _lodepng_chunk_lengthPtr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedChar>)>();

  /// puts the 4-byte type in null terminated string
  void lodepng_chunk_type(
    ffi.Pointer<ffi.Char> type,
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_type(
      type,
      chunk,
    );
  }

  late final _lodepng_chunk_typePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_type');
  late final _lodepng_chunk_type = _lodepng_chunk_typePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.UnsignedChar>)>();

  /// check if the type is the given type
  int lodepng_chunk_type_equals(
    ffi.Pointer<ffi.UnsignedChar> chunk,
    ffi.Pointer<ffi.Char> type,
  ) {
    return _lodepng_chunk_type_equals(
      chunk,
      type,
    );
  }

  late final _lodepng_chunk_type_equalsPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedChar Function(ffi.Pointer<ffi.UnsignedChar>,
              ffi.Pointer<ffi.Char>)>>('lodepng_chunk_type_equals');
  late final _lodepng_chunk_type_equals =
      _lodepng_chunk_type_equalsPtr.asFunction<
          int Function(ffi.Pointer<ffi.UnsignedChar>, ffi.Pointer<ffi.Char>)>();

  /// 0: it's one of the critical chunk types, 1: it's an ancillary chunk (see PNG standard)
  int lodepng_chunk_ancillary(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_ancillary(
      chunk,
    );
  }

  late final _lodepng_chunk_ancillaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedChar Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_ancillary');
  late final _lodepng_chunk_ancillary = _lodepng_chunk_ancillaryPtr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedChar>)>();

  /// 0: public, 1: private (see PNG standard)
  int lodepng_chunk_private(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_private(
      chunk,
    );
  }

  late final _lodepng_chunk_privatePtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedChar Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_private');
  late final _lodepng_chunk_private = _lodepng_chunk_privatePtr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedChar>)>();

  /// 0: the chunk is unsafe to copy, 1: the chunk is safe to copy (see PNG standard)
  int lodepng_chunk_safetocopy(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_safetocopy(
      chunk,
    );
  }

  late final _lodepng_chunk_safetocopyPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedChar Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_safetocopy');
  late final _lodepng_chunk_safetocopy = _lodepng_chunk_safetocopyPtr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedChar>)>();

  /// get pointer to the data of the chunk, where the input points to the header of the chunk
  ffi.Pointer<ffi.UnsignedChar> lodepng_chunk_data(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_data(
      chunk,
    );
  }

  late final _lodepng_chunk_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_data');
  late final _lodepng_chunk_data = _lodepng_chunk_dataPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<ffi.UnsignedChar>)>();

  ffi.Pointer<ffi.UnsignedChar> lodepng_chunk_data_const(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_data_const(
      chunk,
    );
  }

  late final _lodepng_chunk_data_constPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_data_const');
  late final _lodepng_chunk_data_const =
      _lodepng_chunk_data_constPtr.asFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              ffi.Pointer<ffi.UnsignedChar>)>();

  /// returns 0 if the crc is correct, 1 if it's incorrect (0 for OK as usual!)
  int lodepng_chunk_check_crc(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_check_crc(
      chunk,
    );
  }

  late final _lodepng_chunk_check_crcPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(
              ffi.Pointer<ffi.UnsignedChar>)>>('lodepng_chunk_check_crc');
  late final _lodepng_chunk_check_crc = _lodepng_chunk_check_crcPtr
      .asFunction<int Function(ffi.Pointer<ffi.UnsignedChar>)>();

  /// generates the correct CRC from the data and puts it in the last 4 bytes of the chunk
  void lodepng_chunk_generate_crc(
    ffi.Pointer<ffi.UnsignedChar> chunk,
  ) {
    return _lodepng_chunk_generate_crc(
      chunk,
    );
  }

  late final _lodepng_chunk_generate_crcPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.UnsignedChar>)>>(
      'lodepng_chunk_generate_crc');
  late final _lodepng_chunk_generate_crc = _lodepng_chunk_generate_crcPtr
      .asFunction<void Function(ffi.Pointer<ffi.UnsignedChar>)>();
